// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyEnquiries reducer get accept and reject success should update state 1`] = `
Object {
  "data": Array [
    Object {
      "enquireId": 167,
      "enquireStatus": "ACCEPTED",
      "messages": Array [
        Object {
          "message": "",
          "sentAt": "2020-02-25T16:59:53.122+0000",
          "userId": "de2563f1-2e15-4a6a-9e39-9600a8ad4ec1",
        },
      ],
      "negotiationId": 147,
      "spaceId": "SS_SPACE_650",
      "terms": Array [
        Object {
          "termId": 1,
          "value": "12",
        },
        Object {
          "termId": 2,
          "value": "12.0",
        },
        Object {
          "termId": 3,
          "value": "Tue Feb 25 2020 17:59:47 GMT+0100 (hora estándar de Europa central)",
        },
        Object {
          "termId": 4,
          "value": "123",
        },
        Object {
          "termId": 5,
          "value": "",
        },
        Object {
          "termId": 6,
          "value": "",
        },
        Object {
          "termId": 7,
          "value": "",
        },
        Object {
          "termId": 8,
          "value": "123.0",
        },
        Object {
          "termId": 9,
          "value": "",
        },
      ],
    },
    Object {
      "enquireId": 168,
      "enquireStatus": "PENDING_TO_ACCEPT",
      "messages": Array [
        Object {
          "message": "",
          "sentAt": "2020-02-25T17:00:34.014+0000",
          "userId": "de2563f1-2e15-4a6a-9e39-9600a8ad4ec1",
        },
      ],
      "negotiationId": 148,
      "spaceId": "SS_SPACE_650",
      "terms": Array [
        Object {
          "termId": 1,
          "value": "12",
        },
        Object {
          "termId": 2,
          "value": "12.0",
        },
        Object {
          "termId": 3,
          "value": "Tue Feb 25 2020 18:00:28 GMT+0100 (hora estándar de Europa central)",
        },
        Object {
          "termId": 4,
          "value": "13",
        },
        Object {
          "termId": 5,
          "value": "",
        },
        Object {
          "termId": 6,
          "value": "",
        },
        Object {
          "termId": 7,
          "value": "",
        },
        Object {
          "termId": 8,
          "value": "123.0",
        },
        Object {
          "termId": 9,
          "value": "",
        },
      ],
    },
  ],
  "loading": false,
}
`;

exports[`MyEnquiries reducer get accept and reject success should update state 2`] = `
Object {
  "data": Array [
    Object {
      "enquireId": 167,
      "enquireStatus": "PENDING_TO_ACCEPT",
      "messages": Array [
        Object {
          "message": "",
          "sentAt": "2020-02-25T16:59:53.122+0000",
          "userId": "de2563f1-2e15-4a6a-9e39-9600a8ad4ec1",
        },
      ],
      "negotiationId": 147,
      "spaceId": "SS_SPACE_650",
      "terms": Array [
        Object {
          "termId": 1,
          "value": "12",
        },
        Object {
          "termId": 2,
          "value": "12.0",
        },
        Object {
          "termId": 3,
          "value": "Tue Feb 25 2020 17:59:47 GMT+0100 (hora estándar de Europa central)",
        },
        Object {
          "termId": 4,
          "value": "123",
        },
        Object {
          "termId": 5,
          "value": "",
        },
        Object {
          "termId": 6,
          "value": "",
        },
        Object {
          "termId": 7,
          "value": "",
        },
        Object {
          "termId": 8,
          "value": "123.0",
        },
        Object {
          "termId": 9,
          "value": "",
        },
      ],
    },
    Object {
      "enquireId": 168,
      "enquireStatus": "REJECTED",
      "messages": Array [
        Object {
          "message": "",
          "sentAt": "2020-02-25T17:00:34.014+0000",
          "userId": "de2563f1-2e15-4a6a-9e39-9600a8ad4ec1",
        },
      ],
      "negotiationId": 148,
      "spaceId": "SS_SPACE_650",
      "terms": Array [
        Object {
          "termId": 1,
          "value": "12",
        },
        Object {
          "termId": 2,
          "value": "12.0",
        },
        Object {
          "termId": 3,
          "value": "Tue Feb 25 2020 18:00:28 GMT+0100 (hora estándar de Europa central)",
        },
        Object {
          "termId": 4,
          "value": "13",
        },
        Object {
          "termId": 5,
          "value": "",
        },
        Object {
          "termId": 6,
          "value": "",
        },
        Object {
          "termId": 7,
          "value": "",
        },
        Object {
          "termId": 8,
          "value": "123.0",
        },
        Object {
          "termId": 9,
          "value": "",
        },
      ],
    },
  ],
  "loading": false,
}
`;
